# DemoLibrary

./: README.md
CrossOsDynamicLib/: README.md
CrossOsDynamicLib/common/: CMakeLists.txt
CrossOsDynamicLib/common/include/: math_operations.h
CrossOsDynamicLib/common/src/: math_operations.cpp
CrossOsDynamicLib/core/: CMakeLists.txt
CrossOsDynamicLib/core/feature/mutiply/: mutiply.cpp  mutiply.h
CrossOsDynamicLib/core/include/: _core.h
CrossOsDynamicLib/core/src/: _core.cpp
CrossOsDynamicLib/platform/android/app/: build.gradle
CrossOsDynamicLib/platform/android/app/src/androidTest/java/org/fbreader/test/: ExampleInstrumentedTest.java
CrossOsDynamicLib/platform/android/app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CrossOsDynamicLib/platform/android/app/src/main/cpp/outputs/common/: Makefile  cmake_install.cmake
CrossOsDynamicLib/platform/android/app/src/main/cpp/outputs/core/: Makefile  cmake_install.cmake
CrossOsDynamicLib/platform/android/app/src/main/cpp/src/: native-lib.cpp
CrossOsDynamicLib/platform/android/app/src/main/java/org/fbreader/test/: MainActivity.java
CrossOsDynamicLib/platform/android/app/src/main/res/layout/: activity_main.xml
CrossOsDynamicLib/platform/android/app/src/test/java/org/fbreader/test/: ExampleUnitTest.java
CrossOsDynamicLib/platform/android/gradle/: libs.versions.toml
CrossOsDynamicLib/platform/android/gradle/wrapper/: gradle-wrapper.properties
CrossOsDynamicLib/platform/harmony/AppScope/: app.json5
CrossOsDynamicLib/platform/harmony/entry/src/main/cpp/: CMakeLists.txt
CrossOsDynamicLib/platform/harmony/entry/src/main/cpp/src/: napi_init.cpp
CrossOsDynamicLib/platform/harmony/entry/src/main/cpp/types/libentry/: Index.d.ts
CrossOsDynamicLib/platform/harmony/entry/src/main/ets/pages/: Index.ets
